--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "arangojs": "^6.4.0",
+    "mailgun-js": "^0.20.0",
     "promisify-redis": "0.0.4",
     "redis": "^2.8.0"
   },
