--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "arangojs": "^6.4.0",
     "mailgun-js": "^0.20.0",
     "promisify-redis": "0.0.4",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
